tests/run/error_move_self_after_move.out
tests/run/error_move_self_after_move.em:11:13: error: use of 'w' after it was moved
tests/run/error_move_self_after_move.em:11:13: help: a move transfers ownership; pass it without `move` to borrow it instead, or make a copy before the move
tests/run/error_move_self_after_move.em:10:13: note: value moved here
